--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "categories": [
     "Themes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SalavatSamigoullin/qqqoid-theme.git"
+  },
   "contributes": {
     "themes": [
       {
