--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qqqoid-themes",
-  "displayName": "qqqoid VSCode dark monochrome and color themes",
+  "displayName": "qqqoid dark monochrome and color themes",
   "description": "qqqoid dark monochrome and colored (based on dark+) schemes for VSCode",
   "publisher": "qqqoid",
   "icon": "logo.jpg",
